--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
-project(WebServer)
+project(socket)
 
 set(SOURCES main.c)
 
-add_executable(WebServer main.c)
+add_executable(socket main.c)
